Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109833

QEnterEvent does not have a valid timestamp due to QPA API quirks

    XMLWordPrintable

Details

    • baa588880 (dev), e68b57e2e (dev)

    Description

      QEnterEvent is a QInputEvent and so has a timestamp(). But that timestamp is never filled and always reported as 0.

      It looks like the QPA disagrees with the classification of enter events and doesn't support timestamps there. Is there no OS that would correctly timestamp a window enter event? While at it: why isn't there a symmetrical QLeaveEvent with a timestamp?

      QPA also disagrees with the precision of the timestamp: ulong for QPA, but quint64 for QInputEvent. Which one is correct?

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            srutledg Shawn Rutledge
            peppe Giuseppe D'Angelo
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:

              Gerrit Reviews

                There are no open Gerrit changes